deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-deployment
  namespace: travel-api-plan
spec:
  replicas: 2
  selector:
    matchLabels:
      app: travel_planning
  template:
    metadata:
      labels:
        app: travel_planning
    spec:
      containers:
      - name: travel-plan
        image: stenith/travel:v1
        ports:
        - containerPort: 80
