service.yml
apiVersion: v1
kind: Service
metadata: 
     name: travel-service
spec:
    type: LoadBalancer
    selector:
        app: travel_planning
    ports:
     - protocol: TCP 
       port: 80
       targetPort: 80
