ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: travel-ingress
  namespace: travel-api-plan
spec: 
  rules: 
  - host: mytravel.com
    http: 
      paths: 
      - path: /travel
        pathType: Prefix
        backend: 
          service: 
            name: travel-service
            port: 
              number: 80
